{
  "version": 4,
  "terraform_version": "1.8.1",
  "serial": 125,
  "lineage": "d2af11e6-0cbc-7ce7-8e69-2826111e89d0",
  "resources": [
    {
      "mode": "data",
      "type": "aws_network_interface",
      "name": "eth1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:254020127660:network-interface/eni-08cea0ef2a203c7fb",
            "availability_zone": "ap-east-1a",
            "description": "fgtvm-port2",
            "id": "eni-08cea0ef2a203c7fb",
            "interface_type": "interface",
            "mac_address": "06:2a:9a:48:10:d3",
            "owner_id": "254020127660",
            "private_dns_name": "ip-10-1-1-106.ap-east-1.compute.internal",
            "private_ip": "10.1.1.106",
            "private_ips": [
              "10.1.1.106"
            ],
            "requester_id": "AIDATWJGHROWH6WSSWOPJ",
            "security_groups": [
              "sg-0173d22e51cf95824"
            ],
            "subnet_id": "subnet-00bcf41d8a32700f5",
            "vpc_id": "vpc-0f0fa2c121e3f6856"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_network_interface",
      "name": "eth1-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:254020127660:network-interface/eni-0d5901bac3057db40",
            "availability_zone": "ap-east-1b",
            "description": "fgtvm2-port2",
            "id": "eni-0d5901bac3057db40",
            "interface_type": "interface",
            "mac_address": "0a:24:c2:43:30:29",
            "owner_id": "254020127660",
            "private_dns_name": "ip-10-1-3-239.ap-east-1.compute.internal",
            "private_ip": "10.1.3.239",
            "private_ips": [
              "10.1.3.239"
            ],
            "requester_id": "AIDATWJGHROWH6WSSWOPJ",
            "security_groups": [
              "sg-0173d22e51cf95824"
            ],
            "subnet_id": "subnet-00396acab0fb34777",
            "vpc_id": "vpc-0f0fa2c121e3f6856"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_network_interface",
      "name": "vpcendpointip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:254020127660:network-interface/eni-0b76a78c3442a81f6",
            "attachment": [
              {
                "attachment_id": "ela-attach-04640ccd387da5af2",
                "device_index": 1,
                "instance_owner_id": "amazon-aws"
              }
            ],
            "availability_zone": "ap-east-1a",
            "description": "ELB gwy/gatewaylb/0e6fc4185b902d2b",
            "filter": [
              {
                "name": "availability-zone",
                "values": [
                  "ap-east-1a"
                ]
              },
              {
                "name": "description",
                "values": [
                  "*ELB*"
                ]
              },
              {
                "name": "status",
                "values": [
                  "in-use"
                ]
              },
              {
                "name": "vpc-id",
                "values": [
                  "vpc-0f0fa2c121e3f6856"
                ]
              }
            ],
            "id": "eni-0b76a78c3442a81f6",
            "interface_type": "gateway_load_balancer",
            "mac_address": "06:5a:61:39:5b:e7",
            "owner_id": "254020127660",
            "private_dns_name": "ip-10-1-1-155.ap-east-1.compute.internal",
            "private_ip": "10.1.1.155",
            "private_ips": [
              "10.1.1.155"
            ],
            "requester_id": "270564777997",
            "subnet_id": "subnet-00bcf41d8a32700f5",
            "vpc_id": "vpc-0f0fa2c121e3f6856"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_network_interface",
      "name": "vpcendpointipaz2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:254020127660:network-interface/eni-0c65456c2071d80a2",
            "attachment": [
              {
                "attachment_id": "ela-attach-0f1951cd13292babb",
                "device_index": 1,
                "instance_owner_id": "amazon-aws"
              }
            ],
            "availability_zone": "ap-east-1b",
            "description": "ELB gwy/gatewaylb/0e6fc4185b902d2b",
            "filter": [
              {
                "name": "availability-zone",
                "values": [
                  "ap-east-1b"
                ]
              },
              {
                "name": "description",
                "values": [
                  "*ELB*"
                ]
              },
              {
                "name": "status",
                "values": [
                  "in-use"
                ]
              },
              {
                "name": "vpc-id",
                "values": [
                  "vpc-0f0fa2c121e3f6856"
                ]
              }
            ],
            "id": "eni-0c65456c2071d80a2",
            "interface_type": "gateway_load_balancer",
            "mac_address": "0a:fc:7c:90:55:7d",
            "owner_id": "254020127660",
            "private_dns_name": "ip-10-1-3-159.ap-east-1.compute.internal",
            "private_ip": "10.1.3.159",
            "private_ips": [
              "10.1.3.159"
            ],
            "requester_id": "236448846776",
            "subnet_id": "subnet-00396acab0fb34777",
            "vpc_id": "vpc-0f0fa2c121e3f6856"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "FGTPublicIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-082fc6adff0acec41",
            "arn": "arn:aws:ec2:ap-east-1:254020127660:elastic-ip/eipalloc-082fc6adff0acec41",
            "association_id": "eipassoc-075d53edb8ad64387",
            "domain": "vpc",
            "id": "eipalloc-082fc6adff0acec41",
            "instance": "i-067398437caa19f51",
            "network_border_group": "ap-east-1",
            "network_interface": "eni-055b1fbb8452cfc91",
            "private_dns": "ip-10-1-0-238.ap-east-1.compute.internal",
            "private_ip": "10.1.0.238",
            "public_dns": "ec2-16-163-77-233.ap-east-1.compute.amazonaws.com",
            "public_ip": "16.163.77.233",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.fgtvm",
            "aws_lb.gateway_lb",
            "aws_network_interface.eth0",
            "aws_network_interface.eth1",
            "aws_subnet.privatesubnetaz1",
            "aws_subnet.privatesubnetaz2",
            "aws_subnet.publicsubnetaz1",
            "aws_vpc.fgtvm-vpc",
            "aws_vpc_endpoint_service.fgtgwlbservice",
            "data.aws_network_interface.vpcendpointip",
            "data.aws_network_interface.vpcendpointipaz2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "FGTPublicIP2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05f8a77979ec34863",
            "arn": "arn:aws:ec2:ap-east-1:254020127660:elastic-ip/eipalloc-05f8a77979ec34863",
            "association_id": "eipassoc-0b39b54a9a7f624a4",
            "domain": "vpc",
            "id": "eipalloc-05f8a77979ec34863",
            "instance": "i-0805e5a4c713bdb6a",
            "network_border_group": "ap-east-1",
            "network_interface": "eni-00add4847ba646301",
            "private_dns": "ip-10-1-2-113.ap-east-1.compute.internal",
            "private_ip": "10.1.2.113",
            "public_dns": "ec2-43-199-153-35.ap-east-1.compute.amazonaws.com",
            "public_ip": "43.199.153.35",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.fgtvm2",
            "aws_lb.gateway_lb",
            "aws_network_interface.eth0-1",
            "aws_network_interface.eth1-1",
            "aws_subnet.privatesubnetaz1",
            "aws_subnet.privatesubnetaz2",
            "aws_subnet.publicsubnetaz2",
            "aws_vpc.fgtvm-vpc",
            "aws_vpc_endpoint_service.fgtgwlbservice",
            "data.aws_network_interface.vpcendpointip",
            "data.aws_network_interface.vpcendpointipaz2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "fgtvm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-077865546a21b9b96",
            "arn": "arn:aws:ec2:ap-east-1:254020127660:instance/i-067398437caa19f51",
            "associate_public_ip_address": false,
            "availability_zone": "ap-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdb",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0e287cdf4498e9e7b",
                "volume_size": 30,
                "volume_type": "standard"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-067398437caa19f51",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c6i.xlarge",
            "ipv6_address_count": 0,
            "key_name": "recharge-hk",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-055b1fbb8452cfc91"
              },
              {
                "delete_on_termination": false,
                "device_index": 1,
                "network_card_index": 0,
                "network_interface_id": "eni-08cea0ef2a203c7fb"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-055b1fbb8452cfc91",
            "private_dns": "ip-10-1-0-238.ap-east-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.0.238",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-06ebd731082ec0c96",
                "volume_size": 2,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ceb2673c884fd129",
            "tags": {
              "Name": "FortiGateVM-az1"
            },
            "tags_all": {
              "Name": "FortiGateVM-az1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0173d22e51cf95824",
              "sg-0349a34e64ba221b0"
            ]
          },
          "dependencies": [
            "aws_lb.gateway_lb",
            "aws_network_interface.eth0",
            "aws_network_interface.eth1",
            "aws_subnet.privatesubnetaz1",
            "aws_subnet.privatesubnetaz2",
            "aws_subnet.publicsubnetaz1",
            "aws_vpc.fgtvm-vpc",
            "aws_vpc_endpoint_service.fgtgwlbservice",
            "data.aws_network_interface.vpcendpointip",
            "data.aws_network_interface.vpcendpointipaz2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "fgtvm2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-077865546a21b9b96",
            "arn": "arn:aws:ec2:ap-east-1:254020127660:instance/i-0805e5a4c713bdb6a",
            "associate_public_ip_address": false,
            "availability_zone": "ap-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdb",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0b3449b7b876e0504",
                "volume_size": 30,
                "volume_type": "standard"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0805e5a4c713bdb6a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c6i.xlarge",
            "ipv6_address_count": 0,
            "key_name": "recharge-hk",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-00add4847ba646301"
              },
              {
                "delete_on_termination": false,
                "device_index": 1,
                "network_card_index": 0,
                "network_interface_id": "eni-0d5901bac3057db40"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00add4847ba646301",
            "private_dns": "ip-10-1-2-113.ap-east-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.2.113",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-039de2047b58c2a72",
                "volume_size": 2,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01b1471907a4dbb0a",
            "tags": {
              "Name": "FortiGateVM-az2"
            },
            "tags_all": {
              "Name": "FortiGateVM-az2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0173d22e51cf95824",
              "sg-0349a34e64ba221b0"
            ]
          },
          "dependencies": [
            "aws_lb.gateway_lb",
            "aws_network_interface.eth0-1",
            "aws_network_interface.eth1-1",
            "aws_subnet.privatesubnetaz1",
            "aws_subnet.privatesubnetaz2",
            "aws_subnet.publicsubnetaz2",
            "aws_vpc.fgtvm-vpc",
            "aws_vpc_endpoint_service.fgtgwlbservice",
            "data.aws_network_interface.vpcendpointip",
            "data.aws_network_interface.vpcendpointipaz2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "fgtvmigw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:254020127660:internet-gateway/igw-0a5ca89bb289862a9",
            "id": "igw-0a5ca89bb289862a9",
            "owner_id": "254020127660",
            "tags": {
              "Name": "fgtvm-igw"
            },
            "tags_all": {
              "Name": "fgtvm-igw"
            },
            "vpc_id": "vpc-0f0fa2c121e3f6856"
          },
          "dependencies": [
            "aws_vpc.fgtvm-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "gateway_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-east-1:254020127660:loadbalancer/gwy/gatewaylb/0e6fc4185b902d2b",
            "arn_suffix": "gwy/gatewaylb/0e6fc4185b902d2b",
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:ap-east-1:254020127660:loadbalancer/gwy/gatewaylb/0e6fc4185b902d2b",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "gateway",
            "name": "gatewaylb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00396acab0fb34777"
              },
              {
                "subnet_id": "subnet-00bcf41d8a32700f5"
              }
            ],
            "subnets": [
              "subnet-00396acab0fb34777",
              "subnet-00bcf41d8a32700f5"
            ],
            "tags": {
              "Environment": "terraform sample"
            },
            "tags_all": {
              "Environment": "terraform sample"
            },
            "vpc_id": "vpc-0f0fa2c121e3f6856"
          },
          "dependencies": [
            "aws_subnet.privatesubnetaz1",
            "aws_subnet.privatesubnetaz2",
            "aws_vpc.fgtvm-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "fgt_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-east-1:254020127660:listener/gwy/gatewaylb/0e6fc4185b902d2b/8c6353453ff181ec",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 0,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-east-1:254020127660:targetgroup/fgttarget/00d346e18599772492",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-east-1:254020127660:listener/gwy/gatewaylb/0e6fc4185b902d2b/8c6353453ff181ec",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-east-1:254020127660:loadbalancer/gwy/gatewaylb/0e6fc4185b902d2b",
            "mutual_authentication": [],
            "port": 0,
            "protocol": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": 350,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.gateway_lb",
            "aws_lb_target_group.fgt_target",
            "aws_subnet.privatesubnetaz1",
            "aws_subnet.privatesubnetaz2",
            "aws_vpc.fgtvm-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "fgt_target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-east-1:254020127660:targetgroup/fgttarget/00d346e18599772492",
            "arn_suffix": "targetgroup/fgttarget/00d346e18599772492",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "8008",
                "protocol": "TCP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-east-1:254020127660:targetgroup/fgttarget/00d346e18599772492",
            "lambda_multi_value_headers_enabled": false,
            "name": "fgttarget",
            "port": 6081,
            "protocol": "GENEVE",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip_dest_ip_proto"
              }
            ],
            "target_failover": [
              {
                "on_deregistration": "no_rebalance",
                "on_unhealthy": "no_rebalance"
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                  }
                ],
                "unhealthy_state_routing": [
                  {
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0f0fa2c121e3f6856"
          },
          "dependencies": [
            "aws_vpc.fgtvm-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "fgtattach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-east-1:254020127660:targetgroup/fgttarget/00d346e18599772492-2024111308273842950000000c",
            "port": 6081,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-east-1:254020127660:targetgroup/fgttarget/00d346e18599772492",
            "target_id": "10.1.1.106"
          },
          "dependencies": [
            "aws_instance.fgtvm",
            "aws_lb.gateway_lb",
            "aws_lb_target_group.fgt_target",
            "aws_network_interface.eth0",
            "aws_network_interface.eth1",
            "aws_subnet.privatesubnetaz1",
            "aws_subnet.privatesubnetaz2",
            "aws_subnet.publicsubnetaz1",
            "aws_vpc.fgtvm-vpc",
            "aws_vpc_endpoint_service.fgtgwlbservice",
            "data.aws_network_interface.eth1",
            "data.aws_network_interface.vpcendpointip",
            "data.aws_network_interface.vpcendpointipaz2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "fgtattach2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-east-1:254020127660:targetgroup/fgttarget/00d346e18599772492-2024111308273833530000000b",
            "port": 6081,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-east-1:254020127660:targetgroup/fgttarget/00d346e18599772492",
            "target_id": "10.1.3.239"
          },
          "dependencies": [
            "aws_instance.fgtvm2",
            "aws_lb.gateway_lb",
            "aws_lb_target_group.fgt_target",
            "aws_network_interface.eth0-1",
            "aws_network_interface.eth1-1",
            "aws_subnet.privatesubnetaz1",
            "aws_subnet.privatesubnetaz2",
            "aws_subnet.publicsubnetaz2",
            "aws_vpc.fgtvm-vpc",
            "aws_vpc_endpoint_service.fgtgwlbservice",
            "data.aws_network_interface.eth1-1",
            "data.aws_network_interface.vpcendpointip",
            "data.aws_network_interface.vpcendpointipaz2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "eth0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:254020127660:network-interface/eni-055b1fbb8452cfc91",
            "description": "fgtvm-port1",
            "id": "eni-055b1fbb8452cfc91",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:22:48:e1:53:a1",
            "owner_id": "254020127660",
            "private_dns_name": "ip-10-1-0-238.ap-east-1.compute.internal",
            "private_ip": "10.1.0.238",
            "private_ip_list": [
              "10.1.0.238"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.1.0.238"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0173d22e51cf95824"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ceb2673c884fd129"
          },
          "dependencies": [
            "aws_subnet.publicsubnetaz1",
            "aws_vpc.fgtvm-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "eth0-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:254020127660:network-interface/eni-00add4847ba646301",
            "description": "fgtvm2-port1",
            "id": "eni-00add4847ba646301",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0a:4a:ac:ff:46:05",
            "owner_id": "254020127660",
            "private_dns_name": "ip-10-1-2-113.ap-east-1.compute.internal",
            "private_ip": "10.1.2.113",
            "private_ip_list": [
              "10.1.2.113"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.1.2.113"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0173d22e51cf95824"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01b1471907a4dbb0a"
          },
          "dependencies": [
            "aws_subnet.publicsubnetaz2",
            "aws_vpc.fgtvm-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "eth1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:254020127660:network-interface/eni-08cea0ef2a203c7fb",
            "description": "fgtvm-port2",
            "id": "eni-08cea0ef2a203c7fb",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:2a:9a:48:10:d3",
            "owner_id": "254020127660",
            "private_dns_name": "ip-10-1-1-106.ap-east-1.compute.internal",
            "private_ip": "10.1.1.106",
            "private_ip_list": [
              "10.1.1.106"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.1.1.106"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0173d22e51cf95824"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-00bcf41d8a32700f5"
          },
          "dependencies": [
            "aws_subnet.privatesubnetaz1",
            "aws_vpc.fgtvm-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "eth1-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:254020127660:network-interface/eni-0d5901bac3057db40",
            "description": "fgtvm2-port2",
            "id": "eni-0d5901bac3057db40",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0a:24:c2:43:30:29",
            "owner_id": "254020127660",
            "private_dns_name": "ip-10-1-3-239.ap-east-1.compute.internal",
            "private_ip": "10.1.3.239",
            "private_ip_list": [
              "10.1.3.239"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.1.3.239"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0173d22e51cf95824"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-00396acab0fb34777"
          },
          "dependencies": [
            "aws_subnet.privatesubnetaz2",
            "aws_vpc.fgtvm-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "externalroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a5ca89bb289862a9",
            "id": "r-rtb-0779fca21b44904c71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0779fca21b44904c7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.fgtvmigw",
            "aws_route_table.fgtvmpublicrt",
            "aws_vpc.fgtvm-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internalroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0dc9ded75938c0bf21080289494",
            "instance_id": "i-067398437caa19f51",
            "instance_owner_id": "254020127660",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "eni-08cea0ef2a203c7fb",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0dc9ded75938c0bf2",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.fgtvm",
            "aws_lb.gateway_lb",
            "aws_network_interface.eth0",
            "aws_network_interface.eth1",
            "aws_route_table.fgtvmprivatert",
            "aws_subnet.privatesubnetaz1",
            "aws_subnet.privatesubnetaz2",
            "aws_subnet.publicsubnetaz1",
            "aws_vpc.fgtvm-vpc",
            "aws_vpc_endpoint_service.fgtgwlbservice",
            "data.aws_network_interface.vpcendpointip",
            "data.aws_network_interface.vpcendpointipaz2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internalroute2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06f6e1a66b914ddc51080289494",
            "instance_id": "i-0805e5a4c713bdb6a",
            "instance_owner_id": "254020127660",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "eni-0d5901bac3057db40",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06f6e1a66b914ddc5",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.fgtvm",
            "aws_lb.gateway_lb",
            "aws_network_interface.eth0",
            "aws_network_interface.eth1",
            "aws_network_interface.eth1-1",
            "aws_route_table.fgtvmprivatert2",
            "aws_subnet.privatesubnetaz1",
            "aws_subnet.privatesubnetaz2",
            "aws_subnet.publicsubnetaz1",
            "aws_vpc.fgtvm-vpc",
            "aws_vpc_endpoint_service.fgtgwlbservice",
            "data.aws_network_interface.vpcendpointip",
            "data.aws_network_interface.vpcendpointipaz2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "fgtvmprivatert",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:254020127660:route-table/rtb-0dc9ded75938c0bf2",
            "id": "rtb-0dc9ded75938c0bf2",
            "owner_id": "254020127660",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "fgtvm-private-rt"
            },
            "tags_all": {
              "Name": "fgtvm-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f0fa2c121e3f6856"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.fgtvm-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "fgtvmprivatert2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:254020127660:route-table/rtb-06f6e1a66b914ddc5",
            "id": "rtb-06f6e1a66b914ddc5",
            "owner_id": "254020127660",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "fgtvm-private-rt2"
            },
            "tags_all": {
              "Name": "fgtvm-private-rt2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f0fa2c121e3f6856"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.fgtvm-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "fgtvmpublicrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:254020127660:route-table/rtb-0779fca21b44904c7",
            "id": "rtb-0779fca21b44904c7",
            "owner_id": "254020127660",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "fgtvm-public-rt"
            },
            "tags_all": {
              "Name": "fgtvm-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f0fa2c121e3f6856"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.fgtvm-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "internal2associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-059f616dba3451061",
            "route_table_id": "rtb-06f6e1a66b914ddc5",
            "subnet_id": "subnet-00396acab0fb34777"
          },
          "dependencies": [
            "aws_route_table.fgtvmprivatert2",
            "aws_subnet.privatesubnetaz2",
            "aws_vpc.fgtvm-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "internalassociate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02b4beaa688e30d3e",
            "route_table_id": "rtb-0dc9ded75938c0bf2",
            "subnet_id": "subnet-00bcf41d8a32700f5"
          },
          "dependencies": [
            "aws_route_table.fgtvmprivatert",
            "aws_subnet.privatesubnetaz1",
            "aws_vpc.fgtvm-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bbeb5e0ea6e9ce3b",
            "route_table_id": "rtb-0779fca21b44904c7",
            "subnet_id": "subnet-0ceb2673c884fd129"
          },
          "dependencies": [
            "aws_route_table.fgtvmpublicrt",
            "aws_subnet.publicsubnetaz1",
            "aws_vpc.fgtvm-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d01423fcff142e33",
            "route_table_id": "rtb-0779fca21b44904c7",
            "subnet_id": "subnet-01b1471907a4dbb0a"
          },
          "dependencies": [
            "aws_route_table.fgtvmpublicrt",
            "aws_subnet.publicsubnetaz2",
            "aws_vpc.fgtvm-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:254020127660:security-group/sg-0264b3e276a1dc445",
            "description": "Allow all traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0264b3e276a1dc445",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Allow All",
            "name_prefix": "",
            "owner_id": "254020127660",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Public Allow"
            },
            "tags_all": {
              "Name": "Public Allow"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f0fa2c121e3f6856"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.fgtvm-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_allow",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:254020127660:security-group/sg-0349a34e64ba221b0",
            "description": "Public Allow traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0349a34e64ba221b0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8443
              }
            ],
            "name": "Public Allow",
            "name_prefix": "",
            "owner_id": "254020127660",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Public Allow"
            },
            "tags_all": {
              "Name": "Public Allow"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f0fa2c121e3f6856"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.fgtvm-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesubnetaz1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:254020127660:subnet/subnet-00bcf41d8a32700f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-east-1a",
            "availability_zone_id": "ape1-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00bcf41d8a32700f5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "254020127660",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private subnet az1"
            },
            "tags_all": {
              "Name": "private subnet az1"
            },
            "vpc_id": "vpc-0f0fa2c121e3f6856"
          },
          "dependencies": [
            "aws_vpc.fgtvm-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesubnetaz2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:254020127660:subnet/subnet-00396acab0fb34777",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-east-1b",
            "availability_zone_id": "ape1-az2",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00396acab0fb34777",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "254020127660",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private subnet az2"
            },
            "tags_all": {
              "Name": "private subnet az2"
            },
            "vpc_id": "vpc-0f0fa2c121e3f6856"
          },
          "dependencies": [
            "aws_vpc.fgtvm-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnetaz1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:254020127660:subnet/subnet-0ceb2673c884fd129",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-east-1a",
            "availability_zone_id": "ape1-az1",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ceb2673c884fd129",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "254020127660",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public subnet az1"
            },
            "tags_all": {
              "Name": "public subnet az1"
            },
            "vpc_id": "vpc-0f0fa2c121e3f6856"
          },
          "dependencies": [
            "aws_vpc.fgtvm-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnetaz2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:254020127660:subnet/subnet-01b1471907a4dbb0a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-east-1b",
            "availability_zone_id": "ape1-az2",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01b1471907a4dbb0a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "254020127660",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public subnet az2"
            },
            "tags_all": {
              "Name": "public subnet az2"
            },
            "vpc_id": "vpc-0f0fa2c121e3f6856"
          },
          "dependencies": [
            "aws_vpc.fgtvm-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "fgtvm-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:254020127660:vpc/vpc-0f0fa2c121e3f6856",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0f200111de6fbf2ec",
            "default_route_table_id": "rtb-098a125686ff274ed",
            "default_security_group_id": "sg-0173d22e51cf95824",
            "dhcp_options_id": "dopt-094daf4913dbd8d8e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f0fa2c121e3f6856",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-098a125686ff274ed",
            "owner_id": "254020127660",
            "tags": {
              "Name": "terraform fgt demo"
            },
            "tags_all": {
              "Name": "terraform fgt demo"
            }
          }
        }
      ]
    }
  ]
}